--- a/app/src/main/res/layout/activity_logged_in_base.xml
+++ b/app/src/main/res/layout/activity_logged_in_base.xml
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteX="54dp">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/base_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Housemate Hub"
@@ -31,6 +31,21 @@
             android:entries="@array/menu_options" />
 
     </androidx.appcompat.widget.Toolbar>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@drawable/bottom_nav_selector"
+        app:itemTextColor="@drawable/bottom_nav_selector"
+        app:menu="@menu/bottom_nav_bar"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
