--- a/app/src/main/res/layout/activity_logged_in_base.xml
+++ b/app/src/main/res/layout/activity_logged_in_base.xml
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteX="54dp">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/base_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Housemate Hub"
