--- a/app/src/main/res/layout/fragment_expense_dialog.xml
+++ b/app/src/main/res/layout/fragment_expense_dialog.xml
@@ -90,11 +90,31 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp">
+
+            <Button
+                android:id="@+id/split_evenly"
+                android:layout_width="108dp"
+                android:layout_height="32dp"
+                android:background="@android:color/transparent"
+                android:text="Split Evenly"
+                android:textColor="#1554F6"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <ListView
             android:id="@+id/user_list"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
+            android:layout_height="200dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
