--- a/app/src/main/res/layout/fragment_expense_dialog.xml
+++ b/app/src/main/res/layout/fragment_expense_dialog.xml
@@ -103,7 +103,7 @@
                 android:layout_height="32dp"
                 android:background="@android:color/transparent"
                 android:text="Split Evenly"
-                android:textColor="#1554F6"
+                android:textColor="@color/colorMaterialBlue"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -130,7 +130,7 @@
                 android:background="@android:color/transparent"
                 android:stateListAnimator="@null"
                 android:text="Cancel"
-                android:textColor="#1554F6"
+                android:textColor="@color/colorMaterialBlue"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -138,7 +138,7 @@
                 android:id="@+id/create_button"
                 android:layout_width="96dp"
                 android:layout_height="32dp"
-                android:background="#1554F6"
+                android:background="@color/colorMaterialBlue"
                 android:text="Create"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
