--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
     <color name="colorMaterialBlue">#1554F6</color>
+    <color name="colorOwedGreen">#4CAF50</color>
+    <color name="colorDebtRed">#F44336</color>
 </resources>
