--- a/app/src/main/res/layout/fragment_group_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_group_list_dialog.xml
@@ -39,7 +39,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <EditText
-            android:id="@+id/list_title"
+            android:id="@+id/list_title_input"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_margin="16dp"
@@ -50,7 +50,7 @@
             android:paddingStart="16dp" />
 
         <EditText
-            android:id="@+id/list_description"
+            android:id="@+id/list_description_input"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_margin="16dp"
@@ -61,7 +61,7 @@
             android:paddingStart="16dp" />
 
         <CheckBox
-            android:id="@+id/list_subscription"
+            android:id="@+id/list_subscription_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
