--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorMaterialBlue">#1554F6</color>
     <color name="colorOwedGreen">#4CAF50</color>
     <color name="colorDebtRed">#F44336</color>
+    <color name="black">#000000</color>
 </resources>
