--- a/app/src/main/res/layout/activity_logged_in_base.xml
+++ b/app/src/main/res/layout/activity_logged_in_base.xml
@@ -16,9 +16,21 @@
         tools:layout_editor_absoluteX="54dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main_tab_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/tab_back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/base_title"
@@ -28,7 +40,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tab_back_button"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Spinner
