--- a/app/src/main/res/layout/fragment_expense_log.xml
+++ b/app/src/main/res/layout/fragment_expense_log.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".expenses.ExpenseManager">
-
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -14,31 +14,37 @@
         android:layout_marginTop="68dp"
         android:background="@drawable/expense_manager_row_border"
         android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:padding="16dp">
 
         <ImageView
-            android:id="@+id/logged_in_user_circle"
+            android:id="@+id/user_from_circle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
             app:srcCompat="@drawable/user_colored_circle_54" />
 
         <TextView
-            android:id="@+id/expense_verb"
+            android:id="@+id/expense_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
-            android:text="You owe"
+            android:text="Name"
+            android:textColor="#000000"
+            android:textSize="14sp" />
+
+
+        <TextView
+            android:id="@+id/log_expense_verb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text=" owes you"
             android:textColor="#000000"
             android:textSize="14sp" />
 
         <com.blackcat.currencyedittext.CurrencyEditText
-            android:id="@+id/logged_in_user_amount"
+            android:id="@+id/user_from_amount"
             android:layout_width="wrap_content"
             android:layout_height="43dp"
             android:layout_gravity="center_vertical"
@@ -55,24 +61,11 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/overview_user_list"
+        android:id="@+id/expense_container_list"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        android:layout_height="400dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:paddingTop="8dp" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:clickable="true"
-        android:src="@drawable/ic_add_white_24dp"
-        app:backgroundTint="#828282"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
