--- a/app/src/main/res/layout/fragment_calendar_manager.xml
+++ b/app/src/main/res/layout/fragment_calendar_manager.xml
@@ -4,25 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".expenses.ExpenseManager">
+    tools:context=".calendar.CalendarManager">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/pullToRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:layout_marginBottom="120px">
-        <com.emilsjolander.components.StickyScrollViewItems.StickyScrollView
+        android:layout_height="match_parent">
+        <com.cs446.housematehub.ui.StickyScrollView
             android:id="@+id/stickyScroll"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:stuckShadowDrawable="@drawable/sticky_shadow_default">
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:id="@+id/event_list">
             </LinearLayout>
-        </com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>
+        </com.cs446.housematehub.ui.StickyScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
@@ -30,13 +29,13 @@
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_margin="16dp"
         android:clickable="true"
         android:src="@drawable/ic_add_white_24dp"
         app:backgroundTint="#828282"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
