--- a/app/src/main/res/layout/fragment_expense_manager.xml
+++ b/app/src/main/res/layout/fragment_expense_manager.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".expenses.ExpenseManager">
 
-
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/expense_manager_row_border"
         android:orientation="horizontal"
         android:padding="16dp"
@@ -67,12 +66,12 @@
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_margin="16dp"
         android:clickable="true"
         android:src="@drawable/ic_add_white_24dp"
         app:backgroundTint="#828282"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
