--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -3,6 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
     android:scrollbars="vertical">
 
@@ -11,15 +12,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:text="@string/Recent"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:paddingStart="@dimen/account_details_row_margin_side"
-            android:paddingTop="@dimen/account_details_row_margin_side"
-            android:textColor="@color/black"/>
+            android:layout_height="80dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:text="@string/Recent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:paddingStart="@dimen/account_details_row_margin_side"
+                android:paddingTop="@dimen/account_details_row_margin_side"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/black"/>
+
+            <ImageView
+                android:id="@+id/account_details_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:scaleType="fitEnd"
+                android:paddingEnd="20dp"
+                android:paddingTop="10dp"
+                app:srcCompat="@drawable/ic_baseline_account_circle_24" />
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recent_events_recyclerview"
