Change the design of the app

--- a/app/src/main/res/layout/activity_join_house.xml
+++ b/app/src/main/res/layout/activity_join_house.xml
@@ -3,25 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".houseinit.JoinHouseActivity">
 
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/activity_logged_in_base"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="31dp" />
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxWidth="200dp"
+        android:maxHeight="200dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/whitelogo" />
 
     <EditText
         android:id="@+id/nameText"
         android:layout_width="305dp"
         android:layout_height="45dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
         android:id="@+id/codeText"
@@ -30,6 +41,8 @@
         android:layout_marginTop="52dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
@@ -41,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="House name"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/nameText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
@@ -52,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="House code"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/codeText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
@@ -63,8 +78,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="24dp"
         android:text="Join"
+        style="@style/AppTheme.LoginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/codeText" />
 
@@ -72,14 +87,12 @@
         android:id="@+id/backButton"
         android:layout_width="165dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginTop="10dp"
         android:onClick="backButton"
         android:text="Back"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
+        style="@style/AppTheme.LoginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/joinButton"
-        app:layout_constraintVertical_bias="0.038" />
+        app:layout_constraintTop_toBottomOf="@+id/joinButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
