--- a/app/src/main/res/layout/activity_login_house.xml
+++ b/app/src/main/res/layout/activity_login_house.xml
@@ -4,34 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".houseinit.LoginHouseActivity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/activity_logged_in_base"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="110dp" />
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxWidth="200dp"
+        android:maxHeight="200dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/whitelogo" />
 
     <Button
         android:id="@+id/createHouse"
         android:layout_width="165dp"
         android:layout_height="40dp"
+        android:layout_marginTop="50dp"
+        style="@style/AppTheme.LoginButton"
         android:text="Create House"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/include"
-        app:layout_constraintVertical_bias="0.479" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <Button
         android:id="@+id/joinHouse"
         android:layout_width="165dp"
         android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        style="@style/AppTheme.LoginButton"
         android:text="Join House"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/include"
-        app:layout_constraintVertical_bias="0.564" />
+        app:layout_constraintTop_toBottomOf="@id/createHouse" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
