--- a/app/src/main/res/drawable/expense_manager_row_border.xml
+++ b/app/src/main/res/drawable/expense_manager_row_border.xml
@@ -4,11 +4,11 @@
         android:left="16dp"
         android:right="16dp">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#ffffffff" />
+            <solid android:color="#fff" />
 
             <stroke
                 android:width="2dp"
-                android:color="#828282" />
+                android:color="@color/colorPrimary" />
 
             <padding
                 android:bottom="16dp"
