--- a/app/src/main/res/layout/activity_create_house.xml
+++ b/app/src/main/res/layout/activity_create_house.xml
@@ -4,25 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".houseinit.CreateHouseActivity">
 
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/activity_logged_in_base"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="31dp" />
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxWidth="200dp"
+        android:maxHeight="200dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/whitelogo" />
 
     <EditText
         android:id="@+id/nameText"
         android:layout_width="305dp"
         android:layout_height="45dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
         android:id="@+id/codeText"
@@ -31,6 +42,8 @@
         android:layout_marginTop="52dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameText" />
@@ -42,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="House name"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/nameText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
@@ -53,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="House code"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/codeText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
@@ -63,9 +78,9 @@
         android:layout_width="165dp"
         android:layout_height="40dp"
         android:layout_marginTop="24dp"
+        style="@style/AppTheme.LoginButton"
         android:text="Create"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/codeText" />
 
@@ -73,14 +88,12 @@
         android:id="@+id/backButton"
         android:layout_width="165dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginTop="10dp"
         android:onClick="backButton"
+        style="@style/AppTheme.LoginButton"
         android:text="Back"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createButton"
-        app:layout_constraintVertical_bias="0.038" />
+        app:layout_constraintTop_toBottomOf="@+id/createButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
