--- a/app/src/main/res/layout/activity_logged_in_base.xml
+++ b/app/src/main/res/layout/activity_logged_in_base.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#2196F3"
+        android:background="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         tools:layout_editor_absoluteX="54dp">
