--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,24 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".userinit.SignUpActivity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/housematehub_toolbar"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-40dp" />
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxWidth="200dp"
+        android:maxHeight="200dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/whitelogo" />
 
     <EditText
         android:id="@+id/userText"
         android:layout_width="305dp"
         android:layout_height="45dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
         android:id="@+id/passwordText"
@@ -30,6 +41,8 @@
         android:layout_marginTop="52dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userText" />
@@ -41,6 +54,8 @@
         android:layout_marginTop="52dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="Username"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/userText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
@@ -63,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="Password"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
@@ -74,6 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="Confirm Password"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.179"
@@ -85,21 +103,21 @@
         android:layout_height="40dp"
         android:layout_marginTop="24dp"
         android:text="Sign Up"
+        style="@style/AppTheme.LoginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordText2" />
 
     <Button
         android:id="@+id/backButton"
+        style="@style/AppTheme.LoginButton"
         android:layout_width="165dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginTop="4dp"
         android:onClick="backButton"
         android:text="Back"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
-        app:layout_constraintVertical_bias="0.038" />
+        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
