--- a/app/src/main/res/layout/fragment_calendar_event_item.xml
+++ b/app/src/main/res/layout/fragment_calendar_event_item.xml
@@ -68,6 +68,7 @@
                 android:layout_centerVertical="true"
                 android:orientation="vertical"
                 android:padding="10dp"
+                android:backgroundTint="@color/colorPrimary"
                 android:layout_marginRight="16dp"
                 android:background="@drawable/event_card">
                 <LinearLayout
