--- a/app/src/main/res/layout/fragment_expense_dialog.xml
+++ b/app/src/main/res/layout/fragment_expense_dialog.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#828282"
+                android:background="@color/colorPrimary"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
