--- a/app/src/main/res/layout/fragment_expense_manager.xml
+++ b/app/src/main/res/layout/fragment_expense_manager.xml
@@ -69,7 +69,7 @@
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@drawable/ic_add_white_24dp"
-        app:backgroundTint="#828282"
+        app:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
